# ZHMModSDK

./: .gitmodules  CMakeLists.dist.txt  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml
Mods/DebugMod/Src/: DebugMod.cpp
Mods/Editor/Smf/editor_data/chunk0/: globaldata.entity.patch.json
Mods/GameConnection/: CMakeLists.txt
Mods/GameConnection/Src/: GameConnection.cpp  GameConnection.h  SetPropertyHelpers.h
Mods/LogPins/Src/: LogPins.cpp  LogPins.h  SArrayToProp.h
Mods/OnlineJsonMods/: CMakeLists.txt
Mods/OnlineJsonMods/Src/: OnlineJsonMods.cpp  OnlineJsonMods.h
Mods/OnlineJsonMods/Src/gzip/: compress.hpp  decompress.hpp
Tools/DevLoader/Src/: Main.cpp
ZHMModSDK/Include/: Hooks.h
ZHMModSDK/Include/Glacier/: ZHttp.h
ZHMModSDK/Src/: HookImpl.h  Hooks.cpp
